# kdm-notebooks

./: .gitignore
basic/: pyproject.toml
basic/anomaly/: adtk1.ipynb  adtk2.ipynb  anomaly-detection-example.ipynb
basic/classification/: Linear_Discriminant_Analysis.ipynb  Logistic_Regression.ipynb
basic/clustering/: X-means.ipynb  k-means1.ipynb  k-means2.ipynb
basic/dimensionality_reduction/: Kernel-PCA.ipynb  LDA.ipynb  PCA.ipynb  SVD.ipynb
basic/ensemble/: Adaboost_Classification.ipynb  Adaboost_Regression.ipynb  Gradient_Boosting1.ipynb  Gradient_Boosting2.ipynb  Stucking.ipynb  tree0.dot  tree1.dot  tree2.dot  tree3.dot  tree4.dot  tree5.dot  tree6.dot  tree7.dot  tree8.dot  tree9.dot
basic/feature_selection/: boruta.ipynb  select-from-model.ipynb
basic/regression/: linear_regression.ipynb  ridge_and_lasso.ipynb  robust_regression.ipynb  skope-rule.ipynb
basic/timeseries/: prophet.ipynb
basic/tree/: Decision_Tree_Classifier.ipynb  Decision_Tree_Regressor.ipynb  Parameter.ipynb  RuleFit.ipynb  regression_tree
eval/: pyproject.toml
eval/classification/: ROC-AUC.ipynb
eval/distance/: kld.ipynb
eval/model-selection/: CrossValidation.ipynb  Stratified_k_Fold.ipynb  validation_curve.ipynb
eval/regression/: correlation_coefficient.ipynb  r2.ipynb
finance/: 003-radar-circle.ipynb  pyproject.toml
finance/main/: 001-FRED-EN.ipynb  002_RSI.ipynb  003_Compare.ipynb  004-CCI.ipynb  004_ETF_and_k-Year_U.S._Bond_Yield.ipynb  006-FedFunds-and-GrowthRate.ipynb  006_financials.ipynb  007-季節調整済みの経済指標.ipynb  010-quantstats.ipynb  GNK.csv  支出金額.csv  支出金額_加工済みデータ.csv
finance/misc/: edinet-textmining-1.ipynb  edinet.ipynb  edinet2.ipynb  edinet_chatgpt.ipynb  jquants.ipynb  pyPortfolioOpt.ipynb
finance/misc/content/finance/misc/: pyPortfolioOpt.md
finance/nlp/: .gitignore  001-sentiment-analysis.ipynb  mp32srt.ipynb  srt2jp.ipynb  日本語テキスト.txt
finance/visualize/: 002-visuazlize-by-circle.ipynb  ZigZag.ipynb
misc/: 00-griddata.ipynb
prep/: pyproject.toml
prep/api/: SEC_EDGAR.ipynb  deepl.ipynb
prep/api/data/sec-edgar-filings/MSFT/8-K/0001193125-21-017683/: filing-details.html
prep/api/data/sec-edgar-filings/MSFT/8-K/0001193125-21-044940/: filing-details.html  full-submission.txt
prep/api/data/sec-edgar-filings/MSFT/8-K/0001193125-21-065751/: filing-details.html  full-submission.txt
prep/api/data/sec-edgar-filings/MSFT/8-K/0001193125-21-084239/: filing-details.html  full-submission.txt
prep/api/data/sec-edgar-filings/MSFT/8-K/0001193125-21-112687/: filing-details.html
prep/api/data/sec-edgar-filings/MSFT/8-K/0001193125-21-134213/: filing-details.html
prep/api/data/sec-edgar-filings/MSFT/8-K/0001193125-21-167940/: filing-details.html  full-submission.txt
prep/api/data/sec-edgar-filings/MSFT/8-K/0001193125-21-192783/: filing-details.html  full-submission.txt
prep/categorical/: CountEncoder.ipynb  Onehot.ipynb  OrderedTargetStatistics.ipynb  TargetEncoder.ipynb
prep/data/: pandas-basic.ipynb  read-number-from-data.ipynb  sample-data.ipynb  sample.csv  sql-pandas.ipynb  z-001-pre.csv  z-001.csv  z-002-pre.csv  z-002.csv  z-006-pre.csv  z-006.csv
prep/info/: how_to_use_data.md
prep/numerical/: Add_label_to_anomaly.ipynb  Add_label_to_anomaly2.ipynb  BoxCox.ipynb  YeoJonson.ipynb  binning.ipynb
prep/pandas/: PandasGUI.ipynb  pandas-profiling.ipynb  sample-sweetviz.html  sweetviz.ipynb
prep/table/: extract_table_from_pdf.ipynb  select_column_by_column_name.ipynb  show_progress.ipynb  table2fv.ipynb
stylesheet/: k_dm.mplstyle  pyproject.toml  stylesheet.ipynb
timeseries/: .gitignore  pyproject.toml
timeseries/basic/: 001-check-data.ipynb  002-preprocess-trend.ipynb  003-seasonal-decompose.ipynb  004-preprocess-log.ipynb  005-2-MA-process.ipynb  006-AR-process.ipynb  007-MA-process.ipynb  007-pacf.ipynb  GNK-dividend.csv
timeseries/clustering/: 001-KShape.ipynb
timeseries/data/: GOGL_2021-05-01_2021-06-30_historical.csv  NVDA_2021-01-01_2021-06-30_historical.csv  NVDA_2021-05-01_2021-06-30_historical.csv  ZIM_2021-05-01_2021-06-30_historical.csv
timeseries/exponential_smoothing/: 001-simple-es.ipynb  002-hw-es.ipynb  003-haw-es.ipynb
timeseries/finance/: 001-FRED.ipynb  002-Cross-Correlation.ipynb  003-Peak-Detectiion.ipynb  005-Changepoint-Detection.ipynb  008-Anomaly-Detection.ipynb  支出金額.csv
timeseries/forecast/: 001-Prophet.ipynb  002-Prophet-alg.ipynb  003-Prophet-parameter.ipynb
timeseries/model/: 006-Autocovariance-Autocorr.ipynb  007-pacf.ipynb
timeseries/plot/: 001_mplfinance.ipynb  002_RSI.ipynb  003_Compare.ipynb  004_ETF_and_k-Year_U.S._Bond_Yield.ipynb  005_treemap.ipynb  006_financials.ipynb  utils.py
timeseries/plot/data/: 10USY.B_2021-08-01_2022-01-31_historical.csv  2USY.B_2021-08-01_2022-01-31_historical.csv  GOGL Income Statement.csv  GOGL Key Ratios.csv  SBLK Income Statement.csv  SBLK Key Ratios.csv  VOO_2021-08-01_2022-01-31_historical.csv  VTI_2021-08-01_2022-01-31_historical.csv  ZIM Income Statement.csv  ZIM Key Ratios.csv  ^NDQ_2021-08-01_2022-01-31_historical.csv  ^SPX_2021-08-01_2022-01-31_historical.csv
timeseries/preprocess/: 003-seasonal-decompose-mstl.ipynb  004-2-preprocess-gb.ipynb  004-preprocess-log.ipynb  005-inflation-adjustment.ipynb  006-moving-average.ipynb
timeseries/shape/: 001_DTW.ipynb  002_DTWvsDDTW.ipynb  003_DDTW.ipynb  004-ts-extract-features.ipynb  utils.py
timeseries/shape/data/: ZIM_2021-01-01_2022-01-01_historical.csv
timeseries/unsupervised/: DDOG.csv  isolation-forest.ipynb  ruptures.ipynb
visualize/: pyproject.toml
visualize/amounts/: 005_treemap.ipynb  japanmap.ipynb
visualize/category-groupby/: pie-dounut.ipynb  sankey-diagram.ipynb
visualize/distribution/: densityplot.ipynb  histogram.ipynb  violinplot.ipynb
(+6 files in other folders)
