[tool.poetry]
authors = ["kdm <k.datamining@gmail.com>"]
description = "study machine learning"
license = "MIT"
name = "study_machine_learning"
version = "0.1.0"

[tool.poetry.dependencies]
dtreeviz = "^1.3.1"
japanize-matplotlib = "^1.1.3"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
python = "^3.8.5"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
nbqa = "^1.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
