[tool.poetry]
name = "dm-metrics"
version = "0.1.0"
description = ""
authors = ["kdm <k.datamining@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter-book = "^0.11.3"
scikit-learn = "^1.0"
black = "^21.9b0"
ghp-import = "^2.0.2"
matplotlib = "^3.4.3"
sphinx-inline-tabs = "^2021.8.17-beta.10"
japanize-matplotlib = "^1.1.3"
pandas = "^1.3.4"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
nbqa = "^1.1.1"
ghp-import = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
