[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["K_DM <k.datamining@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"
jupyter = "^1.0.0"
ipykernel = "^6.17.1"
transformers = "^4.24.0"
nbqa = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
