[tool.poetry]
authors = ["kdm <k.datamining@gmail.com>"]
description = ""
license = "MIT"
name = "dm-tips"
version = "0.1.0"

[tool.poetry.dependencies]
black = "^21.9b0"
ghp-import = "^2.0.2"
japanize-matplotlib = "^1.1.3"
jupyter-book = "^0.11.3"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
python = "^3.8"
scikit-learn = "^1.0"
sphinx-inline-tabs = "^2021.8.17-beta.10"
category-encoders = "^2.3.0"
lxml = "^4.6.5"
seaborn = "^0.11.2"
tqdm = "^4.62.3"
tabula-py = "^2.3.0"
camelot-py = "^0.10.1"
opencv-contrib-python = "^4.5.5"
ghostscript = "^0.7"
sec-edgar-downloader = "^4.3.0"
deepl = "^1.4.1"
arxiv = "^1.4.2"
PyMuPDF = "^1.19.5"
pandas-profiling = "^3.1.0"
sweetviz = "^2.1.3"
pandasgui = "^0.2.13"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
ghp-import = "^2.0.2"
nbqa = "^1.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
