[tool.poetry]
name = "stylesheet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8"
ipykernel = "^6.11.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
numpy = "^1.22.3"
jupyter = "^1.0.0"
japanize-matplotlib = "^1.1.3"
black = "^22.3.0"
nbqa = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
