[tool.poetry]
authors = ["kdm <k.datamining@gmail.com>"]
description = ""
license = "MIT"
name = "dm-timeseries"
version = "0.1.0"

[tool.poetry.dependencies]
black = "^21.9b0"
category-encoders = "^2.3.0"
ghp-import = "^2.0.2"
japanize-matplotlib = "^1.1.3"
jupyter-book = "^0.11.3"
lxml = "^4.6.5"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
python = "^3.8"
scikit-learn = "^1.0"
seaborn = "^0.11.2"
sphinx-inline-tabs = "^2021.8.17-beta.10"
tqdm = "^4.62.3"
mplfinance = "^0.12.8-beta.9"
pandas-datareader = "^0.10.0"
fastdtw = "^0.3.4"
squarify = "^0.4.3"
tslearn = "^0.5.2"
h5py = "^3.6.0"
pmdarima = "^1.8.5"
dtaidistance = "^2.3.6"
prophet = "^1.0.1"
plotly = "^5.6.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
ghp-import = "^2.0.2"
nbqa = "^1.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
