[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "timeseries"
version = "0.1.0"

[tool.poetry.dependencies]
python = "3.10.4"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
ipykernel = "^6.13.0"
pandas = "^1.4.2"
seaborn = "^0.11.2"
black = "^22.3.0"
autopep8 = "^1.6.0"
certifi = "^2021.10.8"
statsmodels = "^0.13.2"
openml = "^0.12.2"
scikit-learn = "^1.0.2"
japanize-matplotlib = "^1.1.3"
nbqa = "^1.3.1"
xgboost = "^1.6.0"
scipy = "^1.8.0"
japandas = "^0.5.1"
full-fred = "^0.0.9-alpha.3"
ruptures = "^1.1.7"
tsod = "^0.1.4"
tslearn = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
