[tool.poetry]
name = "visualize"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pandas = "^1.4.2"
japanmap = "^0.1.0"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
ipykernel = "^6.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
